deployment/roles/hello/templates/hello.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  ports:
    - port: 80
  selector:
    app: hello
    tier: frontend
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
    spec:
      containers:
      - name: hello
        image: brunnerfelix/greeting-server
        imagePullPolicy: Always
        ports:
        - containerPort: 80
